--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <meta name="description" content="Получите актуальный прогноз погоды для вашего города. Узнайте температуру, влажность, скорость ветра и другие метеорологические данные.">
+    <meta name="keywords" content="прогноз погоды, метеорология, температура, влажность, скорость ветра">
+    <meta name="author" content="Doni Ray">
     <title>Погода на текущий момент</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
